libs/extractor/tests/snapshots/all_tests__global_css_with_imports.snap
---
source: libs/extractor/tests/all_tests.rs
expression: "ToBTreeSet::from(extract(\"test.tsx\",\nr#\"import {globalCss} from '@devup-ui/core'\nglobalCss({\n    imports: [\"https://fonts.googleapis.com/css?family=Roboto\"]\n})\n\"#,\nExtractOption\n{\n    package: \"@devup-ui/core\".to_string(), css_dir:\n    \"@devup-ui/core\".to_string(), single_css: false, import_main_css: false,\n    import_aliases: HashMap::new()\n}).unwrap())"
---
ToBTreeSet {
    styles: {
        Import(
            ExtractImport {
                url: "https://fonts.googleapis.com/css?family=Roboto",
                file: "test.tsx",
            },
        ),
    },
    code: "import \"@devup-ui/core/devup-ui-0.css\";\n;\n",
}
