libs/extractor/tests/snapshots/all_tests__global_css_with_layer.snap
---
source: libs/extractor/tests/all_tests.rs
expression: "ToBTreeSet::from(extract(\"test.tsx\",\nr#\"import {globalCss} from '@devup-ui/core'\nglobalCss({\n    \"*\": {\n        \"@layer\": \"reset\",\n        margin: 0,\n        padding: 0\n    }\n})\n\"#,\nExtractOption\n{\n    package: \"@devup-ui/core\".to_string(), css_dir:\n    \"@devup-ui/core\".to_string(), single_css: false, import_main_css: false,\n    import_aliases: HashMap::new()\n}).unwrap())"
---
ToBTreeSet {
    styles: {
        Static(
            ExtractStaticStyle {
                property: "margin",
                value: "0",
                level: 0,
                selector: Some(
                    Global(
                        "*",
                        "test.tsx",
                    ),
                ),
                style_order: Some(
                    0,
                ),
                layer: Some(
                    "reset",
                ),
            },
        ),
        Static(
            ExtractStaticStyle {
                property: "padding",
                value: "0",
                level: 0,
                selector: Some(
                    Global(
                        "*",
                        "test.tsx",
                    ),
                ),
                style_order: Some(
                    0,
                ),
                layer: Some(
                    "reset",
                ),
            },
        ),
    },
    code: "import \"@devup-ui/core/devup-ui-0.css\";\n;\n",
}
