libs/extractor/tests/snapshots/all_tests__global_css_with_layer_in_selector-2.snap
---
source: libs/extractor/tests/all_tests.rs
expression: "ToBTreeSet::from(extract(\"test.tsx\",\nr#\"import { globalCss } from '@devup-ui/core'\nglobalCss({\n    \".card\": {\n        \"@layer\": \"layout\",\n        display: \"flex\"\n    },\n    \".text\": {\n        \"@layer\": \"typography\",\n        fontSize: \"16px\"\n    }\n})\n\"#,\nExtractOption\n{\n    package: \"@devup-ui/core\".to_string(), css_dir:\n    \"@devup-ui/core\".to_string(), single_css: true, import_main_css: false,\n    import_aliases: HashMap::new()\n}).unwrap())"
---
ToBTreeSet {
    styles: {
        Static(
            ExtractStaticStyle {
                property: "display",
                value: "flex",
                level: 0,
                selector: Some(
                    Global(
                        ".card",
                        "test.tsx",
                    ),
                ),
                style_order: Some(
                    0,
                ),
                layer: Some(
                    "layout",
                ),
            },
        ),
        Static(
            ExtractStaticStyle {
                property: "font-size",
                value: "16px",
                level: 0,
                selector: Some(
                    Global(
                        ".text",
                        "test.tsx",
                    ),
                ),
                style_order: Some(
                    0,
                ),
                layer: Some(
                    "typography",
                ),
            },
        ),
    },
    code: "import \"@devup-ui/core/devup-ui.css\";\n;\n",
}
