libs/extractor/tests/snapshots/all_tests__global_css_with_layer_in_selector.snap
---
source: libs/extractor/tests/all_tests.rs
expression: "ToBTreeSet::from(extract(\"test.tsx\",\nr#\"import { globalCss } from '@devup-ui/core'\nglobalCss({\n    \".button\": {\n        \"@layer\": \"components\",\n        padding: \"8px\",\n        background: \"blue\"\n    }\n})\n\"#,\nExtractOption\n{\n    package: \"@devup-ui/core\".to_string(), css_dir:\n    \"@devup-ui/core\".to_string(), single_css: true, import_main_css: false,\n    import_aliases: HashMap::new()\n}).unwrap())"
---
ToBTreeSet {
    styles: {
        Static(
            ExtractStaticStyle {
                property: "background",
                value: "blue",
                level: 0,
                selector: Some(
                    Global(
                        ".button",
                        "test.tsx",
                    ),
                ),
                style_order: Some(
                    0,
                ),
                layer: Some(
                    "components",
                ),
            },
        ),
        Static(
            ExtractStaticStyle {
                property: "padding",
                value: "8px",
                level: 0,
                selector: Some(
                    Global(
                        ".button",
                        "test.tsx",
                    ),
                ),
                style_order: Some(
                    0,
                ),
                layer: Some(
                    "components",
                ),
            },
        ),
    },
    code: "import \"@devup-ui/core/devup-ui.css\";\n;\n",
}
